# LupinBotV

./: .gitignore  .replit  AI_DETECTION_IMPROVEMENTS.md  AI_QA_FEATURE.md  AI_QA_QUICKSTART.md  AUTO_HELP_DOCUMENTATION.md  BUGS_FIXED.md  CHANGES.md  COMMAND_UPDATE_SUMMARY.md  DASHBOARD_SETUP.md  DASHBOARD_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  DUOLINGO_FEATURES.md  EXPORT_README.md  HELP_IMPROVEMENTS.md  IMPROVEMENTS.md  KEEPALIVE_IMPLEMENTATION.md  KEEPALIVE_QUICKSTART.md  KEEPALIVE_SETUP.md  QUICK_FIX_REMINDERS.md  QUICK_START.md  README.md  REMINDER_FIX_SUMMARY.md  REMINDER_ISSUE_ANALYSIS.md  REPLIT_DEPLOYMENT.md  SETUP.md  VERCEL_DEPLOYMENT.md  backfill_channel.py  cache.py  changes_by_gemini.md  check_export.py  check_reminders.py  dashboard.py  database.db  database.py  database_async.py  gemini.py  main.py  pyproject.toml  (+6 more)
api/: dashboard.py  requirements.txt
attached_assets/: Pasted--bot-name-Lupin-description-A-multi-purpose-Discord-bot-for-coding-communities-that-1759690639307_1759690639309.txt  discord-bot-prompt_1759690873250.txt
cogs/: challenges.py  fun.py  moderation.py  streaks.py  utilities.py
templates/: dashboard.html
